# sync-saves

./: .env.example  .gitignore  LICENSE  README.md  hollow.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.agent/rules/: code-quality.md
.github/workflows/: release_pipeline.yml
.jules/: bolt.md
design-system/sync-saves/: MASTER.md
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DESIGN_PROMPT.md  IMPROVEMENTS.md  MOCKED_DATA.md  PROGRESS.md  SETUP.md  SYNC_LOGIC.md  UI_DESIGN.md  codebase_review.md  requirements.md
scripts/: bump_version.cjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: 2  Cargo.toml  build_log.txt  build_log_2.txt  build_log_v.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  games.rs  mod.rs  pcgw.rs  steam.rs  sync.rs  system.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: compression.rs  extraction.rs  mod.rs  watcher.rs
src-tauri/src/utils/: mod.rs
src/components/common/: Card.tsx  SaveButton.tsx  SaveInput.tsx  ToastContainer.tsx
src/components/dashboard/: RecentActivity.test.tsx  RecentActivity.tsx
src/components/features/: ActivityItem.tsx  AddGameCard.tsx  AddGameModal.tsx  GameCard.tsx  GameSettingsModal.tsx  StatCard.tsx  (+3 more)
src/hooks/: index.ts  useAuthSession.ts  useAutoSync.ts  useBackendConnection.ts
src/lib/: cloudSync.ts  confirm.ts  devices.ts  script-utils.ts  supabase.ts  tauri-games.ts  tauri-pcgw.ts  tauri-steam.ts  tauri.ts  utils.ts
src/pages/: Dashboard.tsx  Games.tsx  Login.tsx  Logs.tsx  Settings.tsx
src/services/: index.ts  syncService.ts
src/stores/: authStore.ts  gamesStore.ts  syncStore.ts  toastStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: database.ts  global.d.ts
supabase/migrations/: 001_initial_schema.sql
(+17 files in other folders)
